--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/chai": "^4",
     "@types/mocha": "^9.0.0",
+    "@types/moxios": "^0",
     "@types/node": "^16.6.1",
     "@types/rimraf": "^3",
     "@types/sinon": "^10.0.2",
@@ -51,6 +52,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
     "mocha": "^9.0.3",
+    "moxios": "^0.4.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
