Implement hybrid npm module

--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
   ],
   "description": "A wrapper around the coinbase API for enabling Lunch Money to gather information about a user's account.",
   "repository": "github:lunch-money/coinbase-to-lunch-money",
-  "main": "./dist/main.js",
-  "exports": {
-    ".": "./dist/main.js"
-  },
   "typesVersions": {
     "*": {
       "main.d.ts": [
@@ -27,10 +23,17 @@
       ]
     }
   },
-  "type": "module",
+  "main": "dist/cjs/main.js",
+  "module": "dist/mjs/main.js",
+  "exports": {
+    ".": {
+      "import": "./dist/mjs/main.js",
+      "require": "./dist/cjs/main.js"
+    }
+  },
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "npm run clean && tsc --project tsconfig.build.json",
+    "build": "npm run clean && tsc -p tsconfig.build-mjs.json && tsc -p tsconfig.build-cjs.json && ./postbuild",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "test": "node --loader ts-node/esm node_modules/mocha/lib/cli/cli --recursive --extension ts",
     "test:live:keys": "node --loader ts-node/esm node_modules/mocha/lib/cli/cli 'test-live/keys.integration.ts' --extension ts",
