--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -22,6 +22,7 @@ jobs:
         run: yarn test --ci --coverage
 
       - name: Version
+        run: yarn plugin import version
         run: yarn version --new-version "${GITHUB_REF:11}" --no-git-tag-version
 
       - name: Publish
