--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -22,7 +22,7 @@ jobs:
         run: yarn test --ci --coverage
 
       - name: Provide auth
-        uses: DamianReeves/write-file-action
+        uses: DamianReeves/write-file-action@v1
         with:
           path: ${{ env.home }}/.yarnrc.yml
           contents: |
