--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,5 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
 
 yarnPath: .yarn/releases/yarn-3.0.1.cjs
+
+npmAuthToken: '10533c43-afb1-4c09-83b4-fdcbd1618f01'
