--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -2,6 +2,7 @@ name: Publish
 on:
   release:
     types: [published]
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -26,7 +27,7 @@ jobs:
         with:
           path: ./.yarnrc.yml
           contents: |
-            echo "\nnpmAuthToken: '${{ secrets.NPM_TOKEN }}'"
+            echo "npmAuthToken: '${{ secrets.NPM_TOKEN }}'"
           write-mode: append
 
       - name: Publish
