--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -1,5 +1,8 @@
 name: Publish
 on:
+  push:
+    branches:
+      - main
   release:
     types: [published]
 
@@ -16,11 +19,11 @@ jobs:
           node-version: '14.x'
           registry-url: https://registry.npmjs.org
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      # - name: Install dependencies
+      #   run: yarn install --frozen-lockfile
 
-      - name: Test
-        run: yarn test --ci --coverage
+      # - name: Test
+      #   run: yarn test --ci --coverage
 
       - name: Provide auth
         uses: DamianReeves/write-file-action@v1.0
@@ -30,5 +33,14 @@ jobs:
             echo "npmAuthToken: '${{ secrets.NPM_TOKEN }}'"
           write-mode: append
 
-      - name: Publish
-        run: yarn npm publish --access public
+      steps:
+        - name: Read yarnrc
+          id: package
+          uses: juliangruber/read-file-action@v1
+          with:
+          path: ./.yarnrc.yml
+        - name: Echo yarnrc
+          run: echo "${{ steps.package.outputs.content }}"
+
+      # - name: Publish
+      #   run: yarn npm publish --access public
