--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      # - name: Test
-      #   run: yarn test --ci --coverage
+      - name: Test
+        run: yarn test --ci --coverage
 
       - name: Provide auth
         uses: DamianReeves/write-file-action@v1.0
@@ -32,15 +32,6 @@ jobs:
           contents: |
             npmAuthToken: '${{ secrets.NPM_TOKEN }}'
           write-mode: append
-
-      - name: Read yarnrc
-        id: package
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: ./.yarnrc.yml
-
-      - name: Echo yarnrc
-        run: echo "${{ steps.package.outputs.content }}"
 
       - name: Publish
         run: yarn npm publish --access public
