--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -1,5 +1,9 @@
 name: Publish
 on:
+  push:
+    branches:
+      - main
+      - jp/return_zero_balances!
   release:
     types: [published]
 
@@ -13,11 +17,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '19.x'
           registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Test
         run: yarn test --ci --coverage
@@ -34,4 +38,5 @@ jobs:
         run: yarn build
 
       - name: Publish
+        if: github.ref == 'refs/heads/main'
         run: yarn npm publish --access public
