fixup! Update github action to publish on update to main

--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - jp/return_zero_balances!
+      - jp/return_zero_balances
   release:
     types: [published]
 
