--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -39,4 +39,4 @@ jobs:
 
       - name: Publish
         if: github.ref == 'refs/heads/main'
-        run: yarn npm publish --access public
+        run: npm publish --access public
