--- a/.github/workflows/npm-publish-release.yml
+++ b/.github/workflows/npm-publish-release.yml
@@ -29,14 +29,6 @@ jobs:
       - name: Test
         run: yarn test --ci --coverage
 
-      - name: Provide auth
-        uses: DamianReeves/write-file-action@v1.0
-        with:
-          path: ./.yarnrc.yml
-          contents: |
-            npmAuthToken: '${{ secrets.NPM_TOKEN }}'
-          write-mode: append
-
       - name: Publish
         if: github.ref == 'refs/heads/main'
-        run: npm publish --access public
+        run: npm publish --access public --//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
